tooling/nargo_cli/tests/snapshots/execute__tests__compile_success_empty_workspace_reexport_bug_force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "9234818230228977246",
  "abi": {
    "parameters": [
      {
        "name": "_x",
        "type": {
          "kind": "struct",
          "path": "library::library2::ReExportMeFromAnotherLib",
          "fields": [
            {
              "name": "x",
              "type": {
                "kind": "field"
              }
            }
          ]
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/43GQQoAAAABQcr/38xRuZjaWmIxqf5lZ82FJUwAAAA=",
  "debug_symbols": "XYxLCoAwDAXvkrUn8Coi0k9aAqEpsRWk9O5+cCFdzhveNPBoa9woBdlhXhqwOFNI0k2tT2CVmCluw3wYJWMZPww1uZ8tZ8bhn1Uc+qr4lF7X134B",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
